--- a/Bookmarks/Base.lproj/ATNurserySpecifyingWindow.xib
+++ b/Bookmarks/Base.lproj/ATNurserySpecifyingWindow.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ATNurserySpecifyingWindowController">
@@ -14,67 +15,21 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Nursery Specifying Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-            <rect key="contentRect" x="113" y="1079" width="480" height="226"/>
+            <rect key="contentRect" x="113" y="1079" width="471" height="123"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="-5" width="480" height="226"/>
+                <rect key="frame" x="0.0" y="0.0" width="471" height="123"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Fbq-xp-pSa">
-                        <rect key="frame" x="29" y="159" width="431" height="22"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="gCL-Rz-EaV">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                        <connections>
-                            <binding destination="GMz-0d-TIc" name="value" keyPath="selection.hostName" id="AIT-Oo-Nbv">
-                                <dictionary key="options">
-                                    <bool key="NSContinuouslyUpdatesValue" value="YES"/>
-                                </dictionary>
-                            </binding>
-                        </connections>
-                    </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xWo-Ij-kGG">
-                        <rect key="frame" x="27" y="189" width="77" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Host Name:" id="Vfj-FK-o7q">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="x8y-ux-P1P">
-                        <rect key="frame" x="29" y="104" width="333" height="22"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Gwy-K6-i1r">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                        <connections>
-                            <binding destination="GMz-0d-TIc" name="value" keyPath="selection.nurseryAssociationName" id="sSj-fE-CSO">
-                                <dictionary key="options">
-                                    <bool key="NSContinuouslyUpdatesValue" value="YES"/>
-                                </dictionary>
-                            </binding>
-                        </connections>
-                    </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="evh-P6-xvd">
-                        <rect key="frame" x="27" y="134" width="172" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Nursery Association Name:" id="aAD-HM-jox">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="25r-2V-dev">
-                        <rect key="frame" x="29" y="49" width="431" height="22"/>
+                        <rect key="frame" x="20" y="56" width="431" height="22"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Gjo-7w-cHL">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                         <connections>
-                            <binding destination="GMz-0d-TIc" name="value" keyPath="selection.nurseryName" id="bh5-37-iT8">
+                            <binding destination="GMz-0d-TIc" name="value" keyPath="selection.serviceName" id="QnO-UI-j0b">
                                 <dictionary key="options">
                                     <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                 </dictionary>
@@ -82,15 +37,15 @@
                         </connections>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fxx-g7-CFR">
-                        <rect key="frame" x="27" y="79" width="96" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Nursery Name:" id="PSQ-Gi-bqE">
+                        <rect key="frame" x="18" y="86" width="92" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Service Name:" id="PSQ-Gi-bqE">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wRQ-3o-BMh">
-                        <rect key="frame" x="384" y="13" width="74" height="32"/>
+                        <rect key="frame" x="384" y="13" width="73" height="32"/>
                         <buttonCell key="cell" type="push" title="Open" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="aj1-ze-NBD">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -102,43 +57,21 @@ DQ
                             <action selector="openNursery:" target="-2" id="Ii1-Pa-Kco"/>
                         </connections>
                     </button>
-                    <button translatesAutoresizingMaskIntoConstraints="NO" id="lGE-Qa-fGR">
-                        <rect key="frame" x="368" y="106" width="94" height="18"/>
-                        <buttonCell key="cell" type="check" title="Use Default" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ITf-fP-fqf">
-                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                        <connections>
-                            <binding destination="GMz-0d-TIc" name="value" keyPath="selection.useDefaultNurseryAssociationName" id="ykp-QD-znO"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="x8y-ux-P1P" firstAttribute="centerY" secondItem="lGE-Qa-fGR" secondAttribute="centerY" id="0Ka-Um-lqK"/>
-                    <constraint firstItem="evh-P6-xvd" firstAttribute="leading" secondItem="x8y-ux-P1P" secondAttribute="leading" id="2F1-uQ-cYX"/>
-                    <constraint firstItem="xWo-Ij-kGG" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="3WV-xc-AS8"/>
-                    <constraint firstItem="wRQ-3o-BMh" firstAttribute="top" secondItem="25r-2V-dev" secondAttribute="bottom" constant="8" symbolic="YES" id="3t2-MI-Bu4"/>
-                    <constraint firstItem="lGE-Qa-fGR" firstAttribute="trailing" secondItem="Fbq-xp-pSa" secondAttribute="trailing" id="Bjp-jy-Y88"/>
-                    <constraint firstItem="lGE-Qa-fGR" firstAttribute="leading" secondItem="x8y-ux-P1P" secondAttribute="trailing" constant="8" symbolic="YES" id="IBU-Co-yfg"/>
-                    <constraint firstItem="x8y-ux-P1P" firstAttribute="top" secondItem="evh-P6-xvd" secondAttribute="bottom" constant="8" symbolic="YES" id="O2x-Wx-z3Q"/>
-                    <constraint firstItem="Fbq-xp-pSa" firstAttribute="leading" secondItem="evh-P6-xvd" secondAttribute="leading" id="OKi-jG-joJ"/>
-                    <constraint firstItem="25r-2V-dev" firstAttribute="leading" secondItem="fxx-g7-CFR" secondAttribute="leading" id="Oqa-xm-XsI"/>
-                    <constraint firstItem="evh-P6-xvd" firstAttribute="top" secondItem="Fbq-xp-pSa" secondAttribute="bottom" constant="8" symbolic="YES" id="V0h-h3-Y3X"/>
-                    <constraint firstAttribute="trailing" secondItem="wRQ-3o-BMh" secondAttribute="trailing" constant="28" id="ePb-7o-9rF"/>
-                    <constraint firstItem="xWo-Ij-kGG" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="29" id="eS8-WK-h3m"/>
-                    <constraint firstItem="xWo-Ij-kGG" firstAttribute="leading" secondItem="Fbq-xp-pSa" secondAttribute="leading" id="jKo-9v-rar"/>
-                    <constraint firstItem="Fbq-xp-pSa" firstAttribute="top" secondItem="xWo-Ij-kGG" secondAttribute="bottom" constant="8" symbolic="YES" id="lmx-xN-QF1"/>
-                    <constraint firstItem="fxx-g7-CFR" firstAttribute="top" secondItem="x8y-ux-P1P" secondAttribute="bottom" constant="8" symbolic="YES" id="m5V-V9-gyM"/>
-                    <constraint firstItem="25r-2V-dev" firstAttribute="top" secondItem="fxx-g7-CFR" secondAttribute="bottom" constant="8" symbolic="YES" id="uEY-Kw-gIz"/>
-                    <constraint firstItem="lGE-Qa-fGR" firstAttribute="trailing" secondItem="25r-2V-dev" secondAttribute="trailing" id="uS9-Lx-0z6"/>
-                    <constraint firstItem="x8y-ux-P1P" firstAttribute="leading" secondItem="fxx-g7-CFR" secondAttribute="leading" id="uuT-70-Mdk"/>
-                    <constraint firstAttribute="trailing" secondItem="Fbq-xp-pSa" secondAttribute="trailing" constant="20" symbolic="YES" id="ymU-nv-QTg"/>
+                    <constraint firstItem="25r-2V-dev" firstAttribute="top" secondItem="fxx-g7-CFR" secondAttribute="bottom" constant="8" symbolic="YES" id="GUI-jP-i6W"/>
+                    <constraint firstItem="25r-2V-dev" firstAttribute="trailing" secondItem="wRQ-3o-BMh" secondAttribute="trailing" id="ZTH-yl-XnJ"/>
+                    <constraint firstItem="fxx-g7-CFR" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="peN-zb-SBf"/>
+                    <constraint firstAttribute="trailing" secondItem="25r-2V-dev" secondAttribute="trailing" constant="20" symbolic="YES" id="qxa-se-s3z"/>
+                    <constraint firstItem="fxx-g7-CFR" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="rDd-pQ-Xuz"/>
+                    <constraint firstItem="fxx-g7-CFR" firstAttribute="leading" secondItem="25r-2V-dev" secondAttribute="leading" id="yxr-5N-VA0"/>
+                    <constraint firstAttribute="bottom" secondItem="wRQ-3o-BMh" secondAttribute="bottom" constant="20" symbolic="YES" id="znh-aK-3hZ"/>
                 </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="s5V-RJ-TLi"/>
             </connections>
-            <point key="canvasLocation" x="335" y="394"/>
+            <point key="canvasLocation" x="330.5" y="342.5"/>
         </window>
         <objectController id="GMz-0d-TIc" userLabel="Nursery Specifying Info Controller">
             <connections>
